@@ -90,8 +90,6 @@ class MultiMatch
 			       om_doccount leaf_number,
 			       om_doccount lastitem,
 			       const OmMatchDecider *mdecider,
-			       vector<bool> & mset_received,
-			       vector<SingleMatch *>::size_type *msets_received,
 			       OmMSet & mset,
 			       bool nowait);
 
@@ -101,6 +99,40 @@ class MultiMatch
 	 *  all return true to signal that they are prepared.
 	 */
 	void prepare_matchers();
+
+	/** Collect the msets generated by all the leaves, and put them into
+	 *  a single mset.
+	 *
+	 *  This runs the match process for each leaf, and merges the results
+	 *  into a single mset.  If collapse keys are present in the
+	 *  OmMSetItems, duplicates are removed based upon their values.
+	 *
+	 *  The first result in the combined mset will always be the highest
+	 *  ranked document (there is no way to specify that only the items
+	 *  after a given position should be returned).
+	 *
+	 *  @param lastitem  The number of items to retrieve into the mset.
+	 *  @param mdecider  The decision functor for the match process.
+	 *  @param mset      The MSet object to put the combined msets into.
+	 */
+	void collect_msets(om_doccount lastitem,
+			   const OmMatchDecider *mdecider,
+			   OmMSet & mset);
+
+	/** Remove elements from the start of the list of items in the mset.
+	 * 
+	 *  This removes the given number of elements from the start of the
+	 *  items in the mset.  It also increments mset.firstitem
+	 *  appropriately, so that it still has the correct value.
+	 *
+	 *  If number_to_remove is greater than the number of elements in
+	 *  the mset, the resulting mset is empty.
+	 *
+	 *  @param number_to_remove  Number of items to remove.
+	 *  @param mset              MSet object to modify.
+	 */
+	void remove_leading_elements(om_doccount number_to_remove,
+				     OmMSet & mset);
 
 	/// Copying is not permitted.
 	MultiMatch(const MultiMatch &);
@@ -137,8 +169,7 @@ class MultiMatch
 	void match(om_doccount first,
 		   om_doccount maxitems,
 		   OmMSet & mset,
-		   const OmMatchDecider *mdecider
-		  );
+		   const OmMatchDecider *mdecider);
 };
 
 #endif /* OM_HGUARD_MULTIMATCH_H */
