@@ -1,3 +1,8 @@
+Tue May  9 16:37:04 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Refactored mset merging code in MultiMatch::match() into separate
+	  methods.  Now ready to add collapse code.
+
 Tue May  9 16:16:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Network stuff should now time out if there is no response.
